# seals

./: pyproject.toml  setup.py
docker/: Dockerfile  env.yml
sealsmodel/: __init__.py  run_seals_generate_base_data.py  run_test_seals.py  seals_generate_base_data.py  seals_main.py  seals_process_luh2.py
