[project]
name = "seals"
description = "SEALS is an acronym"
readme = "README.md"
requires-python = ">=3.6"  # TODO: verify; assuming 3.6 b/c fstrings
license = { file = "LICENSE" }
maintainers = [
        {name = "Justin Andrew Johnson"}
]
keywords = ["gis", "economics", "land use"]
classifiers = [
        "Development Status :: 5 - Production/Stable",
        "Intended Audience :: Science/Research",
        "Programming Language :: Cython",
        "Programming Language :: Python :: 3",
]
dynamic = ["version", "dependencies"]

[project.urls]
homepage = "https://github.com/jandrewjohnson/seals"

# TODO: ask Justin whether there's a main entrypoint and what it's called, if so
#[project.scripts]
#seals = "seals.seals_main:main"

[build-system]
requires = [
        "setuptools>=61", "wheel", "cython<3", "numpy"
]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
version_scheme = "post-release"
local_scheme = "node-and-date"

